fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,22 +1,86 @@
 /* PC */
-@media (min-width:1024px) {
+@media (min-width:64em) {
     #header .mobile-menu {
         display: none;
     }
 
 }
-/* tablet */
-@media (min-width:740px) and (max-width:1023px) {
-
-
+/* tablet & mobile */
+@media (max-width:63.9375em) {
+    .btn {
+        padding: 16px 16px;
+    }
+    .contact-form .form-control {
+        padding: 15px ;
+        font-size: 16px;
+    }
+    .social {
+        font-size: 48px;
+    }
+    #footer .social a {
+        margin: 0 8px;
+    }
+    .contact-submit-btn {
+        font-size: 18px;
+    }
+    
 }
+
+/* tablet */
+@media (min-width:46.25em) and (max-width:63.9375em) {
+}
+
 /* mobile */
-@media (max-width:740px) {
+@media (max-width:46.1875em) {
+   .s-col-full,
+   .s-full-width {
+    width: 100% !important;
+   }
+   .s-mt-8 {
+    margin-top: 8px !important;
+   }
+    #header {
+        overflow: hidden;
+    }
+    #nav {
+        display: block;
+    }
+    #nav .subnav {
+        position: initial;
+        background-color: #333;
+    }
+    #nav .subnav a {
+        color: white;
+        padding: 5px 41px;
+    }
     #nav > li {
+        display: block;
+    }
+    #nav > li {
+        padding: 1px 24px;
+    }
+
+    #nav >li:first-child {
+        display: inline-block;
+    }
+    #header .mobile-menu-btn {
         display: block;
     }
     #header .search-button {
         display: none;
+    }
+    #slider .text-content {
+        bottom: 14px;
+    }
+    #content .member-item {
+        margin-top: 30px;
+        width: 100%;
+    }
+    #content .member-img {
+        width: 60%;
+    }
+    .contact-form {
+        margin-top: 16px;
     }
 
 } 
